--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,11 @@
       {
           "src": "/(.*)",
           "dest": "/"
-      }
+      },
+      {
+        "src": "/assets/(.*)",
+        "dest": "/assets"
+    }
     ]
   }
   
