fix?: Still trying to fix vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/assets/drinks/(.*)",
-      "dest": "/assets/drinks/$1"
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
     },
     {
       "src": "/(.*)",
