debug: testing vercel

--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/assets/(.*)",
-      "dest": "/assets/"
+      "src": "/assets/drinks(.*)",
+      "dest": "/assets/drinks"
     },
     {
       "src": "/(.*)",
