debug: testing vercel

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/drinks(.*)",
-      "dest": "/drinks"
+      "dest": "/public/drinks"
     },
     {
       "src": "/(.*)",
