debug: testing vercel

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/drinks/(.*)",
+      "dest": "/public/drinks/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/"
     }
